--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,16 @@ python =
     3.12: py312
 
 [testenv]
+deps = 
+    pytest
+    pytest-cov
+    matplotlib
+    numpy
+    openpyxl
+    pandas
+    reportlab
+    sympy
+    ipython
 basepython =
     pypy3: pypy3
     py38: python3.8
@@ -39,5 +49,7 @@ setenv =
     READTHEDOCS_VERSION = latest
 extras =
     doc
+deps =
+    sphinx
 commands =
     sphinx-build -d "{toxworkdir}/docs_doctree" docs/source "docs/docs_out" --color -vW -bhtml
