--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system] 
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-version = "0.1.0"
+version = "0.1.1"
 name = "better_hydroponics"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -37,6 +37,13 @@ keywords = ["hydroponics",
         "solution maker"
 
 ]
+
+[tools.setuptools.packages.find]
+
+
+[tool.setuptools.package-data]
+hydroponics = ["../../data/*"]
+
 
 
 [project.urls]
