--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-version = "0.1.1"
+version = "0.1.3"
 name = "better_hydroponics"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -42,7 +42,7 @@ keywords = ["hydroponics",
 
 
 [tool.setuptools.package-data]
-hydroponics = ["../../data/*"]
+hydroponics = ["data/*"]
 
 
 
